using ModuleEdycja.ViewModels;
using System.Windows.Controls;

namespace ModuleEdycja.Views
{
    public partial class SzczegolyJednostkiView : UserControl
    {
        public SzczegolyJednostkiView()
        {
            InitializeComponent();
        }
    }
}
