using ModuleEdycja.ViewModels;
using System.Windows.Controls;

namespace ModuleEdycja.Views
{
    public partial class SzczegolyMarynarzaView : UserControl
    {
        public SzczegolyMarynarzaView()
        {
            InitializeComponent();
        }
    }
}
